--- a/index.html
+++ b/index.html
@@ -1,19 +1,406 @@
 <!DOCTYPE html>
 <html>
+
   <head>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="js/libs/documentup.js"></script>
-    <script>
-      DocumentUp.document({
-        repo:         "fnichol/chef-ruby_build",
-        twitter:      "fnichol",
-        afterRender:  function() {
-          $('#sections a').html(function(index, heading) {
-            return heading.replace(/^&lt;.*\/a&gt; /, '');
-          });
-        }
-      });
-    </script>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="ruby-build Chef Cookbook : Chef cookbook for ruby-build. Manages the ruby-build framework and its installed rubies. A LWRP is also defined." />
+
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>ruby-build Chef Cookbook</title>
   </head>
-  <body></body>
+
+  <body>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/fnichol/chef-ruby_build">View on GitHub</a>
+
+          <h1 id="project_title">ruby-build Chef Cookbook</h1>
+          <h2 id="project_tagline">Chef cookbook for ruby-build. Manages the ruby-build framework and its installed rubies. A LWRP is also defined.</h2>
+
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/fnichol/chef-ruby_build/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/fnichol/chef-ruby_build/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <p><a href="http://travis-ci.org/fnichol/chef-ruby_build"><img src="https://secure.travis-ci.org/fnichol/chef-ruby_build.png?branch=master" alt="Build Status"></a></p>
+
+<h2>
+<a name="description"></a> Description</h2>
+
+<p>Manages the <a href="https://github.com/sstephenson/ruby-build">ruby-build</a> framework and its installed Rubies.
+A lightweight resources and providers (<a href="http://wiki.opscode.com/display/chef/Lightweight+Resources+and+Providers+%28LWRP%29">LWRP</a>) is also defined.</p>
+
+<h2>
+<a name="usage"></a> Usage</h2>
+
+<p>Simply include <code>recipe[ruby_build]</code> in your run_list to have ruby-build
+installed. You will also have access to the <code>ruby_build_ruby</code> resource. See
+the <a href="#lwrps">Resources and Providers</a> section for more details.</p>
+
+<h2>
+<a name="requirements"></a> Requirements</h2>
+
+<h3>
+<a name="requirements-chef"></a> Chef</h3>
+
+<p>Tested on 0.10.8 but newer and older version should work just
+fine. File an <a href="https://github.com/fnichol/chef-ruby_build/issues">issue</a> if this isn't the case.</p>
+
+<h3>
+<a name="requirements-platform"></a> Platform</h3>
+
+<p>The following platforms have been tested with this cookbook, meaning that
+the recipes and LWRPs run on these platforms without error:</p>
+
+<ul>
+<li>ubuntu (10.04/10.10/11.04/11.10/12.04)</li>
+<li>mac_os_x (10.7/10.8)</li>
+<li>debian</li>
+<li>freebsd</li>
+<li>redhat</li>
+<li>centos</li>
+<li>fedora</li>
+<li>amazon</li>
+<li>scientific</li>
+<li>suse</li>
+</ul><p>Please <a href="https://github.com/fnichol/chef-ruby_build/issues">report</a> any additional platforms so they can be added.</p>
+
+<h3>
+<a name="requirements-cookbooks"></a> Cookbooks</h3>
+
+<p>There are <strong>no</strong> external cookbook dependencies. However, if you are
+installing <a href="http://jruby.org/">JRuby</a> then a Java runtime will need to be installed.
+The Opscode <a href="http://community.opscode.com/cookbooks/java">java cookbook</a> can be used on supported platforms.</p>
+
+<h2>
+<a name="installation"></a> Installation</h2>
+
+<p>Depending on the situation and use case there are several ways to install
+this cookbook. All the methods listed below assume a tagged version release
+is the target, but omit the tags to get the head of development. A valid
+Chef repository structure like the <a href="https://github.com/opscode/chef-repo">Opscode repo</a> is also assumed.</p>
+
+<h3>
+<a name="installation-platform"></a> From the Opscode Community Platform</h3>
+
+<p>To install this cookbook from the Opscode platform, use the <em>knife</em> command:</p>
+
+<pre><code>knife cookbook site install ruby_build
+</code></pre>
+
+<h3>
+<a name="installation-berkshelf"></a> Using Berkshelf</h3>
+
+<p><a href="http://berkshelf.com/">Berkshelf</a> is a cookbook dependency manager and development
+workflow assistant. To install Berkshelf:</p>
+
+<pre><code>cd chef-repo
+gem install berkshelf
+berks init
+</code></pre>
+
+<p>To use the Community Site version:</p>
+
+<pre><code>echo "cookbook 'ruby_build'" &gt;&gt; Berksfile
+berks install
+</code></pre>
+
+<p>Or to reference the Git version:</p>
+
+<pre><code>repo="fnichol/chef-ruby_build"
+latest_release=$(curl -s https://api.github.com/repos/$repo/git/refs/tags \
+| ruby -rjson -e '
+  j = JSON.parse(STDIN.read);
+  puts j.map { |t| t["ref"].split("/").last }.sort.last
+')
+cat &gt;&gt; Berksfile &lt;&lt;END_OF_BERKSFILE
+cookbook 'ruby_build',
+  :git =&gt; 'git://github.com/$repo.git', :branch =&gt; '$latest_release'
+END_OF_BERKSFILE
+</code></pre>
+
+<h3>
+<a name="installation-librarian"></a> Using Librarian-Chef</h3>
+
+<p><a href="https://github.com/applicationsonline/librarian#readme">Librarian-Chef</a> is a bundler for your Chef cookbooks.
+To install Librarian-Chef:</p>
+
+<pre><code>cd chef-repo
+gem install librarian
+librarian-chef init
+</code></pre>
+
+<p>To use the Opscode platform version:</p>
+
+<pre><code>echo "cookbook 'ruby_build'" &gt;&gt; Cheffile
+librarian-chef install
+</code></pre>
+
+<p>Or to reference the Git version:</p>
+
+<pre><code>repo="fnichol/chef-ruby_build"
+latest_release=$(curl -s https://api.github.com/repos/$repo/git/refs/tags \
+| ruby -rjson -e '
+  j = JSON.parse(STDIN.read);
+  puts j.map { |t| t["ref"].split("/").last }.sort.last
+')
+cat &gt;&gt; Cheffile &lt;&lt;END_OF_CHEFFILE
+cookbook 'ruby_build',
+  :git =&gt; 'git://github.com/$repo.git', :ref =&gt; '$latest_release'
+END_OF_CHEFFILE
+librarian-chef install
+</code></pre>
+
+<h2>
+<a name="recipes"></a> Recipes</h2>
+
+<h3>
+<a name="recipes-default"></a> default</h3>
+
+<p>Installs the ruby-build codebase and initializes Chef to use the Lightweight
+Resources and Providers (<a href="http://wiki.opscode.com/display/chef/Lightweight+Resources+and+Providers+%28LWRP%29">LWRPs</a>).</p>
+
+<h2>
+<a name="attributes"></a> Attributes</h2>
+
+<h3>
+<a name="attributes-git-url"></a> git_url</h3>
+
+<p>The Git URL which is used to install ruby-build.</p>
+
+<p>The default is <code>"git://github.com/sstephenson/ruby-build.git"</code>.</p>
+
+<h3>
+<a name="attributes-git-ref"></a> git_ref</h3>
+
+<p>A specific Git branch/tag/reference to use when installing ruby-build. For
+example, to pin ruby-build to a specific release:</p>
+
+<pre><code>node['ruby_build']['git_ref'] = "v20111030"
+</code></pre>
+
+<p>The default is <code>"master"</code>.</p>
+
+<h3>
+<a name="attributes-default-ruby-base-path"></a> default_ruby_base_path</h3>
+
+<p>The default base path for a system-wide installed Ruby. For example, the
+following resource:</p>
+
+<pre><code>ruby_build_ruby "1.9.3-p0"
+</code></pre>
+
+<p>will be installed into
+<code>"#{node['ruby_build']['default_ruby_base_path']}/1.9.3-p0"</code> unless a
+<code>prefix_path</code> attribute is explicitly set.</p>
+
+<p>The default is <code>"/usr/local/ruby"</code>.</p>
+
+<h3>
+<a name="attributes-upgrade"></a> upgrade</h3>
+
+<p>Determines how to handle installing updates to the ruby-build framework.
+There are currently 2 valid values:</p>
+
+<ul>
+<li>
+<code>"none"</code>, <code>false</code>, or <code>nil</code>: will not update ruby-build and leave it in its
+current state.</li>
+<li>
+<code>"sync"</code> or <code>true</code>: updates ruby-build to the version specified by the
+<code>git_ref</code> attribute or the head of the master branch by default.</li>
+</ul><p>The default is <code>"none"</code>.</p>
+
+<h2>
+<a name="lwrps"></a> Resources and Providers</h2>
+
+<h3>
+<a name="lwrps-rbr"></a> ruby_build_ruby</h3>
+
+<h4>
+<a name="lwrps-rbr-actions"></a> Actions</h4>
+
+<table>
+<tr>
+<th>Action</th>
+      <th>Description</th>
+      <th>Default</th>
+    </tr>
+<tr>
+<td>install</td>
+      <td>
+        Build and install a Ruby from a definition file. See the ruby-build
+        readme<sup>(1)</sup> for more details.
+      </td>
+      <td>Yes</td>
+    </tr>
+<tr>
+<td>reinstall</td>
+      <td>
+        Force a recompiliation of the Ruby from source. The :install action
+        will skip a build if the target install directory already exists.
+      </td>
+      <td> </td>
+    </tr>
+</table><ol>
+<li><a href="https://github.com/sstephenson/ruby-build#readme">ruby-build readme</a></li>
+</ol><h4>
+<a name="lwrps-rbr-attributes"></a> Attributes</h4>
+
+<table>
+<tr>
+<th>Attribute</th>
+      <th>Description</th>
+      <th>Default Value</th>
+    </tr>
+<tr>
+<td>definition</td>
+      <td>
+        <b>Name attribute:</b> the name of a built-in definition<sup>(1)</sup>
+        or the path to a ruby-build definition file.
+      </td>
+      <td><code>nil</code></td>
+    </tr>
+<tr>
+<td>prefix_path</td>
+      <td>The path to which the Ruby will be installed.</td>
+      <td><code>nil</code></td>
+    </tr>
+<tr>
+<td>user</td>
+      <td>
+        A user which will own the installed Ruby. The default value of
+        <code>nil</code> denotes a system-wide Ruby (root-owned) is being
+        targeted. <b>Note:</b> if specified, the user must already exist.
+      </td>
+      <td><code>nil</code></td>
+    </tr>
+<tr>
+<td>group</td>
+      <td>
+        A group which will own the installed Ruby. The default value of
+        <code>nil</code> denotes a system-wide Ruby (root-owned) is being
+        targeted. <b>Note:</b> if specified, the group must already exist.
+      </td>
+      <td><code>nil</code></td>
+    </tr>
+<tr>
+<td>environment</td>
+      <td>
+        A Hash of additional environment variables<sup>(2)</sup>, such as
+        <code>CONFIGURE_OPTS</code> or <code>RUBY_BUILD_MIRROR_URL</code>.
+      </td>
+      <td><code>nil</code></td>
+    </tr>
+</table><ol>
+<li><a href="https://github.com/sstephenson/ruby-build/tree/master/share/ruby-build">built-in definition</a></li>
+<li><a href="https://github.com/sstephenson/ruby-build#special-environment-variables">special environment variables</a></li>
+</ol><h4>
+<a name="lwrps-rbr-examples"></a> Examples</h4>
+
+<h5>Install Ruby</h5>
+
+<pre><code># See: https://github.com/sstephenson/ruby-build/issues/186
+ruby_build_ruby "ree-1.8.7-2012.02" do
+  environment({ 'CONFIGURE_OPTS' =&gt; '--no-tcmalloc' })
+end
+
+ruby_build_ruby "1.9.3-p0" do
+  prefix_path "/usr/local/ruby/ruby-1.9.3-p0"
+  environment({
+    'RUBY_BUILD_MIRROR_URL' =&gt; 'http://local.example.com'
+  })
+
+  action      :install
+end
+
+ruby_build_ruby "jruby-1.6.5"
+</code></pre>
+
+<p><strong>Note:</strong> the install action is default, so the second example is more common.</p>
+
+<h5>Install A Ruby For A User</h5>
+
+<pre><code>ruby_build_ruby "maglev-1.0.0" do
+  prefix_path "/home/deploy/.rubies/maglev-1.0.0"
+  user        "deploy"
+  group       "deploy"
+end
+</code></pre>
+
+<h5>Reinstall Ruby</h5>
+
+<pre><code>ruby_build_ruby "rbx-1.2.4" do
+  prefix_path "/opt/rbx-1.2.4"
+
+  action      :reinstall
+end
+</code></pre>
+
+<p><strong>Note:</strong> the Ruby will be built whether or not the Ruby exists in the
+<code>prefix_path</code> directory.</p>
+
+<h2>
+<a name="development"></a> Development</h2>
+
+<ul>
+<li>Source hosted at <a href="https://github.com/fnichol/chef-ruby_build">GitHub</a>
+</li>
+<li>Report issues/Questions/Feature requests on <a href="https://github.com/fnichol/chef-ruby_build/issues">GitHub Issues</a>
+</li>
+</ul><p>Pull requests are very welcome! Make sure your patches are well tested.
+Ideally create a topic branch for every separate change you make.</p>
+
+<h2>
+<a name="license"></a> License and Author</h2>
+
+<p>Author:: <a href="https://github.com/fnichol">Fletcher Nichol</a> (<a href="mailto:fnichol@nichol.ca">fnichol@nichol.ca</a>) <a href="http://coderwall.com/fnichol"><img src="http://api.coderwall.com/fnichol/endorsecount.png" alt="endorse"></a></p>
+
+<p>Copyright 2011, Fletcher Nichol</p>
+
+<p>Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at</p>
+
+<pre><code>http://www.apache.org/licenses/LICENSE-2.0
+</code></pre>
+
+<p>Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.</p>
+      </section>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">ruby-build Chef Cookbook maintained by <a href="https://github.com/fnichol">fnichol</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-29670723-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
+
+  </body>
 </html>
