Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,36 +1,35 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="ruby-build Chef Cookbook : Chef cookbook for ruby-build. Manages the ruby-build framework and its installed rubies. A LWRP is also defined." />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>ruby-build Chef Cookbook by fnichol</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>ruby-build Chef Cookbook</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1 class="header">ruby-build Chef Cookbook</h1>
+        <p class="header">Chef cookbook for ruby-build. Manages the ruby-build framework and its installed rubies. A LWRP is also defined.</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/fnichol/chef-ruby_build">View on GitHub</a>
+        <ul>
+          <li class="download"><a class="buttons" href="https://github.com/fnichol/chef-ruby_build/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/fnichol/chef-ruby_build/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/fnichol/chef-ruby_build">View On GitHub</a></li>
+        </ul>
 
-          <h1 id="project_title">ruby-build Chef Cookbook</h1>
-          <h2 id="project_tagline">Chef cookbook for ruby-build. Manages the ruby-build framework and its installed rubies. A LWRP is also defined.</h2>
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/fnichol">fnichol</a></p>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/fnichol/chef-ruby_build/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/fnichol/chef-ruby_build/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+      </header>
+      <section>
         <p><a href="http://travis-ci.org/fnichol/chef-ruby_build"><img src="https://secure.travis-ci.org/fnichol/chef-ruby_build.png?branch=master" alt="Build Status"></a></p>
 
 <h2>
@@ -380,17 +379,12 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">ruby-build Chef Cookbook maintained by <a href="https://github.com/fnichol">fnichol</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
     </div>
-
-              <script type="text/javascript">
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+		          <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
           </script>
@@ -400,7 +394,6 @@ limitations under the License.</p>
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
-
 
   </body>
 </html>
